# RefactoAI

./: .gitignore  AI Code Analysis & Fixing Project Blueprint.docx  PLAN.md  SPECS.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt  test_all.py  test_semantic_engine.py
backend/app/: main.py
backend/app/agents/: __init__.py  architect.py  coder.py  planner.py  qa_agent.py  reviewer.py
backend/app/config/: settings.py
backend/app/core/: auth.py  dag_orchestrator.py  error_handler.py  execution_tools.py  logger.py  model_router.py  orchestrator.py  patcher.py  prompts.py
backend/app/engine/: indexer.py  vector_store.py
backend/app/mcp/: __init__.py  client_manager.py
backend/app/parser/: ast_chunker.py  document_loader.py
backend/app/routers/: code.py  settings.py  ws.py
backend/app/vectorstore/: chroma_client.py
backend/chroma_db/: chroma.sqlite3
backend/lancedb_data/__manifest/_transactions/: 0-e02cf2df-5055-4c5d-8fcb-1f8f558d44cb.txn
backend/lancedb_data/codebase_index.lance/_transactions/: 0-7e685373-451c-44a7-b1d9-c1dd53a2b9e1.txn  1-22fe9a38-7341-45f1-b4f3-6727f67423d4.txn  2-1874e3d5-3be8-4af6-9f4f-92245163d391.txn
backend/sandbox_workspace/: .gitkeep
backend/test_chroma_db/: chroma.sqlite3
extension/: package-lock.json  package.json  webpack.config.js
extension/src/: extension.ts
extension/webview-dist/: index.html
frontend/: dl.cjs  fix.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/dist-electron/: main.js  preload.cjs  preload.js  preload_raw.cjs
(+36 files in other folders)
